<resources>
    <string name="app_name">digarfo</string>
    <string name="name">Name</string>
    <string name="rcp_numb">\?</string>
    <string name="fav_numb">\?</string>
    <string name="coment_numb">\?</string>
    <string name="coment_number">\?</string>
    <string name="descricao_content">text</string>
    <string name="srch_result_text">resultados para \"?\"</string>
    <string name="btn_rct_analise">Receitas para Análise (?)</string>
    <string name="btn_users_denunciados">Usuários Denunciados</string>
    <string name="btn_rct_denunciadas">Receitas Denunciadas</string>
    <string name="btn_user_ban">Usuários Banidos</string>
    <string name="title_rct_analise">Receitas para Análise (?)</string>
</resources>