<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".visualizacaodeperfil">

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="389dp"
        android:layout_height="70dp"
        app:srcCompat="@drawable/line"
        tools:layout_editor_absoluteX="-6dp"
        tools:layout_editor_absoluteY="439dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="RECEITAS"
        android:textColor="#FE9896"
        tools:layout_editor_absoluteX="41dp"
        tools:layout_editor_absoluteY="521dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="FAVORITOS"
        android:textColor="#D8D8D8"
        tools:layout_editor_absoluteX="171dp"
        tools:layout_editor_absoluteY="521dp" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="23dp"
        android:layout_height="22dp"
        app:srcCompat="@drawable/lapis_icon"
        tools:layout_editor_absoluteX="12dp"
        tools:layout_editor_absoluteY="518dp" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="27dp"
        android:layout_height="31dp"
        app:srcCompat="@drawable/coment_icon"
        tools:layout_editor_absoluteX="259dp"
        tools:layout_editor_absoluteY="509dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="COMENTARIOS"
        android:textColor="#D8D8D8"
        tools:layout_editor_absoluteX="286dp"
        tools:layout_editor_absoluteY="518dp" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="44dp"
        android:layout_height="53dp"
        app:srcCompat="@drawable/heart_icon"
        tools:layout_editor_absoluteX="144dp"
        tools:layout_editor_absoluteY="521dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="11dp"
        android:layout_height="17dp"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_editor_absoluteX="292dp"
        tools:text="@string/coment_number" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/descricao_content"
        android:textColor="#7E7D7D"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="454dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textView14"
        app:layout_constraintHorizontal_bias="0.614"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:text="Receitas" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1192dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:srcCompat="@drawable/masterchef"
        tools:layout_editor_absoluteX="0dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="260dp"
        android:layout_height="92dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/receitas_removebg_preview" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="39dp"
        android:layout_height="63dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profile_icon" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="TextView"
        android:textColor="#555555"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="395dp"
        tools:text="@string/name" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/rcp_numb"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_editor_absoluteX="96dp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fav_numb"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="193dp"
        tools:layout_editor_absoluteY="419dp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="Favoritos"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        tools:layout_editor_absoluteX="167dp" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="Comentarios"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.376"
        app:layout_constraintStart_toEndOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.122"
        tools:layout_editor_absoluteX="0dp"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="234dp"
        tools:srcCompat="@tools:sample/avatars" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="300dp"
        android:layout_height="140dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.236"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.86" />

    <ImageView
        android:id="@+id/imageView20"
        android:layout_width="23dp"
        android:layout_height="28dp"
        app:srcCompat="@drawable/menu_removebg_preview"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="33dp" />

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="400dp"
        android:layout_height="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/detalhe3"
        tools:layout_editor_absoluteX="-7dp" />

    <ImageView
        android:id="@+id/imageView22"
        android:layout_width="46dp"
        android:layout_height="44dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView21"
        app:layout_constraintTop_toTopOf="@+id/imageView21"
        app:srcCompat="@drawable/botao_adicionar__1_"
        tools:layout_editor_absoluteX="173dp" />

    <ImageView
        android:id="@+id/imageView23"
        android:layout_width="61dp"
        android:layout_height="45dp"
        android:layout_marginEnd="88dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView22"
        app:layout_constraintHorizontal_bias="0.916"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView21"
        app:srcCompat="@drawable/botao_de_inicio__1_" />

    <ImageView
        android:id="@+id/imageView24"
        android:layout_width="38dp"
        android:layout_height="42dp"
        android:layout_marginStart="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView22"
        app:layout_constraintTop_toTopOf="@+id/imageView21"
        app:srcCompat="@drawable/contorno_em_forma_de_coracao__1_" />

    <!-- Raio dos cantos arredondados -->

</androidx.constraintlayout.widget.ConstraintLayout>